# ziphmm

./: .gitignore  CMakeLists.txt  ProjectHome.md  README  README.md
branches/add_viterbi/test_data/: test1.seq  test5.hmm  test6.seq
branches/add_viterbi/zipHMM/: python_test.py  test_device_io.cpp  viterbi.cpp
branches/fix_pd/test_data/: postTest1.devices  test2_10000.seq
branches/fix_pd/zipHMM/: calibrate.cpp  generate_seq.cpp  hmm_io.cpp  io_utils.cpp  posterior_decoding.cpp  pyZipHMM.cpp  pyZipHMM.py  py_forward.py  test.hmm
branches/multiple_sequences/test_data/: simpleGeneFinder.hmm  testOffByOneEm.seq
branches/multiple_sequences/web/files/example/: example.py
branches/multiple_sequences/zipHMM/: forwarder.hpp  matrix.hpp  python_example.py  python_test.py  test_forwarder.cpp
branches/multiple_sequences/zipHMM/rZipHMM/: NAMESPACE
branches/multiple_sequences/zipHMM/rZipHMM/man/: readHMM.Rd
branches/multiple_sequences_parallelization/: CMakeLists.txt
branches/multiple_sequences_parallelization/test_data/: test8States.hmm
branches/multiple_sequences_parallelization/web/files/example/: example.r
branches/multiple_sequences_parallelization/zipHMM/: PThreadProcessingDevice.cpp  ProcessingDevice.hpp  Stage2JobControl.hpp  ViterbiJobControl.hpp  forward.cpp  forwarder.hpp  test_forwarder.cpp  test_utils.hpp
branches/multiple_sequences_parallelization/zipHMM/pyZipHMM/: pyZipHMM.py
branches/multiple_sequences_parallelization/zipHMM/rZipHMM/R/: rZipHMM.r
branches/multiple_sequences_parallelization/zipHMM/rZipHMM/man/: writeHMM.Rd
branches/r_bindings/: example.hmm
branches/r_bindings/test_data/: test2.hmm  test3.hmm  test5_20.seq  testVectorReserve.hmm
branches/r_bindings/test_data/data_structure_test_post/nStates2seq/: 16.seq
branches/r_bindings/zipHMM/: CMakeLists.txt  PThreadProcessingDevice.cpp  debug.cpp  forwarder.hpp  generate_01_seq.cpp  hmm_io.hpp  hmm_utils.hpp  matrix.cpp  performance_description.hpp  r_example.r  test_forwarder.cpp  timer.hpp
branches/r_bindings/zipHMM/rZipHMM/man/: rZipHMM-package.Rd  readHMMspec.Rd
test_data/: simpleGeneFinder.seq  test5_10000.seq
trunk/: README
trunk/test_data/: testOffByOneEm.hmm  testOffByOneTrans.hmm  testOneState.hmm
trunk/web/: index.html
trunk/web/files/: calibrate.r  example.py
trunk/web/files/OSX/pyZipHMM_1.1.0/: setup.py
trunk/web/files/example/: example.seq
trunk/web/files/multiple_sequence_example/: example.py
trunk/web/scripts/: shBrushPython.js
trunk/zipHMM/: CMakeLists.txt  MapReduceJobControl.hpp  PThreadProcessingDevice.hpp  calibrate_main.cpp  cpp_example.cpp  forwarder.cpp  forwarder.hpp  io_utils.hpp  pyZipHMM.cpp  python_test.py  rZipHMM.cpp  setup.py  test_forwarder.cpp  test_rZipHMM.r
trunk/zipHMM/pyZipHMM/: pyZipHMM.py
trunk/zipHMM/rZipHMM/man/: rZipHMM-package.Rd
trunk/zipHMM/rZipHMM/src/: Makefile
versions/: LATEST_VERSION
versions/zipHMM-1.0.0/test_data/: test0.hmm  test2_20.seq  test4.hmm  test5.seq  test6_10000.seq  testNoSolution.hmm  testZeroAdd.hmm
versions/zipHMM-1.0.0/test_data/data_structure_test_post/nStates2seq/: 32.seq
versions/zipHMM-1.0.0/zipHMM/: PThreadProcessingDevice.hpp  ProcessingDevice.hpp  Stage1JobControl.hpp  cmake_install.cmake  debug.hpp  forwarder.cpp  generate_biased_hmm.cpp  generate_hmm.cpp  performance_description.cpp  posterior_decoding.cpp  posterior_decoding.hpp  pyZipHMM.cpp  pyZipHMM.py  python_example.py  seq_io.cpp  seq_io.hpp  simple_stop_forwarder.cpp
versions/zipHMM-1.0.1/: CMakeLists.txt
versions/zipHMM-1.0.1/test_data/: test2.seq
versions/zipHMM-1.0.1/zipHMM/: calibrate.hpp  cpp_example.cpp  posterior_decoding.cpp  prob_spaces.cpp  pyZipHMM.cpp  python_example.py
versions/zipHMM-1.0.2/: CMakeLists.txt
versions/zipHMM-1.0.2/cmake/Modules/: FindLibR.cmake
versions/zipHMM-1.0.2/web/: index.html
versions/zipHMM-1.0.2/web/files/example/: example.cpp
versions/zipHMM-1.0.2/zipHMM/: CMakeLists.txt  Makevars  forwarder.cpp  posterior_decoding.hpp  pyZipHMM.cpp  rZipHMM.cpp
versions/zipHMM-1.0.2/zipHMM/rZipHMM/R/: rZipHMM.r
versions/zipHMM-1.0.2/zipHMM/rZipHMM/man/: Forwarder.Rd
versions/zipHMM-1.1.0/: CMakeLists.txt  Makefile
versions/zipHMM-1.1.0/test_data/: test4.seq  test4_10000.seq
versions/zipHMM-1.1.0/web/: zipHMM.bib
versions/zipHMM-1.1.0/web/files/multiple_sequence_example/: example.cpp  example.r
versions/zipHMM-1.1.0/web/scripts/: shBrushR.js
versions/zipHMM-1.1.0/zipHMM/: CMakeLists.txt  PThreadProcessingDevice.cpp  Stage2JobControl.hpp  build_forwarder.cpp  calibrate.hpp  cpp_example.cpp  forwarder.cpp  hmm_utils.cpp  io_utils.cpp  prob_spaces.hpp  pyZipHMM.cpp  test_utils.cpp
versions/zipHMM-1.1.0/zipHMM/pyZipHMM/: pyZipHMM.py
versions/zipHMM-1.1.0/zipHMM/rZipHMM/: DESCRIPTION
versions/zipHMM-1.1.0/zipHMM/rZipHMM/R/: rZipHMM.r
versions/zipHMM-1.1.0/zipHMM/rZipHMM/man/: Forwarder.Rd  rZipHMM-package.Rd  viterbi.Rd
web/: index.html  styles.css
web/files/: example.r
web/files/OSX/pyZipHMM_1.0.2/: setup.py
web/files/OSX/pyZipHMM_1.0.2/pyZipHMM/: pyZipHMM.py
web/files/OSX/pyZipHMM_1.1.0/: setup.py
web/files/OSX/pyZipHMM_1.1.0/pyZipHMM/: __init__.py  pyZipHMM.py
web/files/example/: example.py
web/files/multiple_sequence_example/: example.py
zipHMM/: CMakeLists.txt  MapReduceJobControl.hpp  PThreadProcessingDevice.hpp  ProcessingDevice.hpp  Stage1JobControl.cpp  Stage2JobControl.hpp  calibrate.cpp  cmake_install.cmake  cpp_example.cpp  forwarder.cpp  io_utils.hpp  pyZipHMM.cpp  py_forward.py  python_example.py  python_test.py  rZipHMM.cpp  rZipHMM.r  simple_forwarder.hpp  simple_stop_forwarder.hpp  test_rZipHMM.r  testtest.hmm  timer.hpp  viterbi.hpp
zipHMM-1.0.0/test_data/: test6_100000.seq  testNoStates.hmm
zipHMM-1.0.0/test_data/data_structure_test_post/: data_structure
zipHMM-1.0.0/zipHMM/: python_test.py  test.hmm_spec
zipHMM/pyZipHMM/: __init__.py  pyZipHMM.py
zipHMM/rZipHMM/: DESCRIPTION
zipHMM/rZipHMM/R/: rZipHMM.r
zipHMM/rZipHMM/man/: posteriorDecoding.Rd
